--- a/Couette.tex
+++ b/Couette.tex
@@ -125,7 +125,7 @@ u(y,t) = Y(y) T(t) .
 
 The equation of motion then reads
 \[
-Y T' = \nu T Y'' \qquad\to\qquad  \frac{T'}{ \nu T} = \frac{Y''}{Y} = -c
+Y T' = \nu T Y'' \qquad\implies\qquad  \frac{T'}{ \nu T} = \frac{Y''}{Y} = -c
 \]
 The last equality follows because functions of two independent
 variables can only be equal if constant.
