--- a/Euler.tex
+++ b/Euler.tex
@@ -161,7 +161,7 @@ Notice that we may have $dT/dt = 0$ even if $\partial T / \partial t
 \ne 0$, if
 \[
 \frac{\partial T }{ \partial t} = - \bfu \cdot \nabla T
-\qquad\to\qquad
+\qquad\implies\qquad
 \frac{d T }{d t} = 0 .
 \]
 The first equation precisely describes the situation in which a change
@@ -172,7 +172,7 @@ Equivalently, we may have $\partial T / \partial t = 0$, but $dT/dt
 \ne 0$:
 \[
 \frac{d T }{d t} = \bfu \cdot \nabla T
-\qquad\to\qquad
+\qquad\implies\qquad
 \frac{\partial T }{\partial t} = 0 ,
 \]
 which expresses the fact that a particle moving with the flow may
@@ -447,7 +447,7 @@ that the density is constant,
 \rho^*
 \frac{d\bfu^* }{dt^* } =
 -  \nabla^* \frac{ p }{ \rho_0 u_0^2 } 
-+  \frac{ L }{ u_0^2 } \bfg \qquad \to \qquad
++  \frac{ L }{ u_0^2 } \bfg \qquad \implies \qquad
 \rho^* \frac{d\bfu^* }{dt^* } =
 -  \nabla^* p^*
 +  \rho^* \bfg^* 
