--- a/Fluid_Mechanics.tex
+++ b/Fluid_Mechanics.tex
@@ -25,22 +25,7 @@
 \usepackage{showlabels}
 
 %% defs.-
-
-%\newcommand{\eye}{\mathbf{1}}
-\newcommand{\eye}{\mathbb{1}}
-\newcommand{\bfu}{\mathbf{u}}
-\newcommand{\bfq}{\mathbf{q}}
-\newcommand{\bfv}{\mathbf{v}}
-\newcommand{\bff}{\mathbf{f}}
-\newcommand{\bfF}{\mathbf{F}}
-\newcommand{\bfg}{\mathbf{g}}
-\newcommand{\bfe}{\mathbf{e}}
-\newcommand{\bhe}{\hat{\mathbf{e}}}
-\newcommand{\bfn}{\mathbf{n}}
-\newcommand{\bfr}{\mathbf{r}}
-
-\newcommand{\vort}{\bm{\omega}}
-\newcommand{\divu}{\nabla\cdot\bfu}
+\input{defs}
 
 \begin{document}
 
