--- a/NS_energy.tex
+++ b/NS_energy.tex
@@ -118,7 +118,7 @@ expressed as a law for the specific internal energy:
 This looks more similar to \ref{eq:} for an ideal fluid if we split the
 stress tensor into the pressure diagonal and the rest:
 \[
-\tau = \tau' - p \eye \qquad \to \qquad
+\tau = \tau' - p \eye \qquad \implies \qquad
  \tau' : \nabla\bfu = \tau' : \nabla\bfu - p \divu ,
 \]
 hence
