--- a/gravity_waves.tex
+++ b/gravity_waves.tex
@@ -99,7 +99,7 @@ conditions:
 However, the fact that Laplace equation must be satisfied places a
 strong condition on the kind of function $g(z)$ may be:
 \[
-\nabla^2 \phi = 0 \qquad \to \qquad
+\nabla^2 \phi = 0 \qquad \implies \qquad
 g''(z)  \sin(kx -\omega t ) - g(z)  k^2 \sin(kx -\omega t ) = 0 ,
 \]
 which meanse
@@ -211,7 +211,7 @@ If the bottom is small, compared to the wavelength $\lambda$, then
 $kh = 2\pi h / \lambda $ is a small number, and we may approximate
 $\tanh(kh)\approx kh$. Then,
 \[
-\omega^2= g h  k^2 \qquad \to \qquad \omega= k \sqrt{g h} .
+\omega^2= g h  k^2 \qquad \implies \qquad \omega= k \sqrt{g h} .
 \]
 
 In this limit, the phase velocity is independent of velocity, which
@@ -247,7 +247,7 @@ If the bottom is deep, compared to the wavelength $\lambda$, then $kh
 = 2\pi h / \lambda $ is a large number, and its hyperbolic tangent is
 very nearly $1$. In this limit,
 \[
-\omega^2 \approx g  k \qquad \to \qquad \omega= \sqrt{g k} .
+\omega^2 \approx g  k \qquad \implies \qquad \omega= \sqrt{g k} .
 \]
 These waves are highly dispersive, since their phase velocity depends
 on the wavelength:
@@ -258,8 +258,8 @@ c =  \frac{\omega}{k} = \sqrt{ g /k  } =  \sqrt{ g \lambda / (2\pi)  }  .
 The group velocity is now different from the phase velocity. In fact,
 it is one half that value:
 \[
-2 \log\omega = \log k + \log g \qquad \to \qquad
-\frac{2}{\omega} \frac{d\omega}{dk} = \frac1{k} \qquad  \to \qquad
+2 \log\omega = \log k + \log g \qquad \implies \qquad
+\frac{2}{\omega} \frac{d\omega}{dk} = \frac1{k} \qquad  \implies \qquad
 c_\mathrm{g} = \frac{c}{2}
 \]
 
