--- a/particle.tex
+++ b/particle.tex
@@ -205,13 +205,14 @@ symmetric. All together, three terms in 3D ($xy$, $xz$, and $yz$).
 
 Also, from the definition of the tensor $\nabla \bfu$ of
 Eq. \ref{eq:nabla_u_def},
-\[
-\epsilon_{ij} = \frac12
-\left[
- (\nabla \bfu)_{ij} +
- (\nabla \bfu)_{ji}
-\right] ,
-\]
+\begin{equation}
+  \label{eq:epsilon_as_grad_u}
+  \epsilon_{ij} = \frac12
+  \left[
+    (\nabla \bfu)_{ij} +
+    (\nabla \bfu)_{ji}
+  \right] ,
+\end{equation}
 so that $\epsilon$ is the symmetrized version of the gradient of the
 velocity.
 
