--- a/sound_waves.tex
+++ b/sound_waves.tex
@@ -51,7 +51,7 @@ transition. Mathematically, this is a Taylor expansion:
 p \approx
 p_0 +
 \left. \frac{d p}{d\rho} \right|_{\rho_0} (\rho-\rho_0)
-\qquad\to\qquad
+\qquad\implies\qquad
 p' \approx \left. \frac{d p}{d\rho} \right|_{\rho_0} \rho' .
 \]
 The proportionality is given by $\kappa$, defined as
@@ -89,7 +89,7 @@ value for some standard situations. By far, the best known situation
 is the speed of sound in air in standar conditions. Since air is, to
 a good approximation, a perfect gas, then
 \[
-p V = n R T \qquad\to\qquad p  = \rho\frac{ R T}{m},
+p V = n R T \qquad\implies\qquad p  = \rho\frac{ R T}{m},
 \]
 where $m$ is the molar gas.
 
@@ -145,8 +145,8 @@ value.
 
 We can manipulate the adiabatic relationship this way:
 \[
-p V^\gamma = \mathrm{ct} \qquad\to\qquad
-p V^\gamma = \mathrm{ct}_2 m^\gamma \qquad\to\qquad
+p V^\gamma = \mathrm{ct} \qquad\implies\qquad
+p V^\gamma = \mathrm{ct}_2 m^\gamma \qquad\implies\qquad
 p = \mathrm{ct}_2 \rho^\gamma ,
 \]
 where $\mathrm{ct}_2$ is some other constant, and we introduce
@@ -154,7 +154,7 @@ $m^\gamma$ because the mass of a particle, $m$, is constant (as we
 will ellaborate again later, see e.g. Section \ref{sec:continuity3} .)
 By the shortcut of applying logarithms we readily find our $\kappa$:
 \[
-\log p = \mathrm{ct}_3 + \gamma \log \rho  \qquad\to\qquad
+\log p = \mathrm{ct}_3 + \gamma \log \rho  \qquad\implies\qquad
 \frac{1}{ p }
 \frac{d p}{d\rho}=  \gamma \frac{1}{\rho} ,
 \]
@@ -224,7 +224,7 @@ light waves in vacuum, which is purely transversal).
 The value of $u_0$ is set by the requirement that $\bfu$ is indeed a
 solution:
 \[
-\omega \rho_A - \rho_0 u_0 k = 0 \qquad\to\qquad
+\omega \rho_A - \rho_0 u_0 k = 0 \qquad\implies\qquad
 u_0 = c \frac{\rho_A}{\rho_0} .
 \]
 
