--- a/creeping.tex
+++ b/creeping.tex
@@ -226,7 +226,7 @@ T_{ij}(\bfq) := \frac 1{\eta q^2} \left[
 \]
 
 In 3D, Equation \ref{eq:p_Fourier0} may be inverted back to real space
-to yield \cite{book_creep}.
+to yield \cite{pozrikidis2011introduction}.
 \[
 p(\bfr) = \frac{\bff\cdot\bfr}{4\pi r^3} .
 \]
