--- a/fluid_mechanics.bib
+++ b/fluid_mechanics.bib
@@ -1,6 +1,80 @@
+@book{landau2013fluid,
+  title={Fluid Mechanics},
+  author={Landau, L.D. and Lifshitz, E.M.},
+  number={v. 6},
+  isbn={9781483140506},
+  year={2013},
+  publisher={Elsevier Science}
+}
+  url={https://books.google.es/books?id=CeBbAwAAQBAJ},
+
+@book{white1991viscous,
+  title={Viscous Fluid Flow},
+  author={White, F.M.},
+  isbn={9780070697126},
+  lccn={90038967},
+  series={McGraw-Hill series in mechanical engineering},
+  year={1991},
+  publisher={McGraw-Hill}
+}
+  url={https://books.google.es/books?id=G6IeAQAAIAAJ},
+
+@book{white2011fluid,
+  title={Fluid Mechanics},
+  author={White, F.M.},
+  isbn={9780073529349},
+  lccn={2010481187},
+  series={McGraw-Hill series in mechanical engineering},
+  year={2011},
+  publisher={McGraw Hill}
+}
+  url={https://books.google.es/books?id=egk8SQAACAAJ},
+
 @book{Brehms_Tierleben,
 	title="Brehms Tierleben ",
 	author="Friedrich Specht",
 	notes="Harbor porpoise, Phocoena phocoena L. 1/15 natural size",
 	year=1927,
 	}
+
+
+@article{lubensky1996hydrodynamics,
+  title={Hydrodynamics of monolayer domains at the air--water interface},
+  author={Lubensky, David K and Goldstein, Raymond E},
+  journal={Physics of Fluids (1994-present)},
+  volume={8},
+  number={4},
+  pages={843--854},
+  year={1996},
+  publisher={AIP Publishing}
+}
+
+@article{bray2002theory,
+  title={Theory of phase-ordering kinetics},
+  author={Bray, Alan J},
+  journal={Advances in Physics},
+  volume={51},
+  number={2},
+  pages={481--587},
+  year={2002},
+  publisher={Taylor \& Francis}
+}
+
+@article{saffman1975brownian,
+  title={Brownian motion in biological membranes},
+  author={Saffman, PG and Delbr{\"u}ck, M},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={72},
+  number={8},
+  pages={3111--3113},
+  year={1975},
+  publisher={National Acad Sciences}
+}
+
+@book{pozrikidis2011introduction,
+  title={Introduction to theoretical and computational fluid dynamics},
+  author={Pozrikidis, Constantine},
+  year={2011},
+  publisher={Oxford University Press}
+}
+
