--- a/fluid_mechanics.bib
+++ b/fluid_mechanics.bib
@@ -1,3 +1,14 @@
+@book{feynman2011feynman,
+  title={The Feynman Lectures on Physics, Vol. II: The New Millennium Edition: Mainly Electromagnetism and Matter},
+  author={Feynman, R.P. and Leighton, R.B. and Sands, M.},
+  isbn={9780465024940},
+  lccn={2010938208},
+  series={Feynman Lectures on Physics},
+  url={https://books.google.es/books?id=hlRhwGK40fgC},
+  year={2011},
+  publisher={Basic Books}
+}
+
 @book{landau2013fluid,
   title={Fluid Mechanics},
   author={Landau, L.D. and Lifshitz, E.M.},
