--- a/intro.tex
+++ b/intro.tex
@@ -1,5 +1,14 @@
 \chapter*{Foreword}
 
+%Ποταμο˜ισι το˜ισιν αὐτο˜ισιν ἐμβαίνουσιν, ἕτερα καὶ ἕτερα ὕδατα ἐπιρρε˜ι
+%Aguas siempre nuevas fluyen sobre aquellos que entran en los mismos
+%r´ıos.
+%Her´aclito [2].
+
+%H A Diels. 
+%Die Fragmente der Vorsokratiker. 
+%Weidmann, Berlín, Alemania, 2 edition, 1903.
+
 Just a compilation of notes on different aspects of fluid
 dynamics I have collected over the years.
 
