--- a/defs.tex
+++ b/defs.tex
@@ -1,17 +1,16 @@
 %\newcommand{\eye}{\mathbf{1}}
 \DeclareMathOperator{\Tr}{Tr}
-\newcommand{\eye}{\mathbb{1}}
-\newcommand{\bfu}{\mathbf{u}}
-\newcommand{\bfq}{\mathbf{q}}
-\newcommand{\bfv}{\mathbf{v}}
-\newcommand{\bff}{\mathbf{f}}
-\newcommand{\bfF}{\mathbf{F}}
-\newcommand{\bfg}{\mathbf{g}}
-\newcommand{\bfe}{\mathbf{e}}
-\newcommand{\bhe}{\hat{\mathbf{e}}}
-\newcommand{\bfn}{\mathbf{n}}
-\newcommand{\bfr}{\mathbf{r}}
-
-\newcommand{\vort}{\bm{\omega}}
-\newcommand{\divu}{\nabla\cdot\bfu}
-\newcommand*{\tran}{^{\mkern-1.5mu\mathsf{T}}}
+\newcommand{\eye}{\ensuremath{\mathbb{1}}}
+\newcommand{\bfu}{\ensuremath{\mathbf{u}}}
+\newcommand{\bfq}{\ensuremath{\mathbf{q}}}
+\newcommand{\bfv}{\ensuremath{\mathbf{v}}}
+\newcommand{\bff}{\ensuremath{\mathbf{f}}}
+\newcommand{\bfF}{\ensuremath{\mathbf{F}}}
+\newcommand{\bfg}{\ensuremath{\mathbf{g}}}
+\newcommand{\bfe}{\ensuremath{\mathbf{e}}}
+\newcommand{\bhe}{\ensuremath{\hat{\mathbf{e}}}}
+\newcommand{\bfn}{\ensuremath{\mathbf{n}}}
+\newcommand{\bfr}{\ensuremath{\mathbf{r}}}
+\newcommand{\vort}{\ensuremath{\bm{\omega}}}
+\newcommand{\divu}{\ensuremath{\nabla\cdot\bfu}}
+\newcommand*{\tran}{\ensuremath{^{\mkern-1.5mu\mathsf{T}}}}
