--- a/fluid_mechanics.bib
+++ b/fluid_mechanics.bib
@@ -89,3 +89,15 @@
   publisher={Oxford University Press}
 }
 
+@book{Diels-Kranz,
+title="Die Fragmente der Vorsokratiker",
+author="H A Diels",
+publisher="Weidmann",
+year="1903",
+address="Berlin, Germany",
+edition="2",
+revision="W Kranz, 1952"
+}
+
+
+
