--- a/intro.tex
+++ b/intro.tex
@@ -1,13 +1,24 @@
+\chapter*{}
+
+\vspace{6ex}
+%\begin{quotation}
+\begin{quote}
+  \greektext
+
+  Ποταμο˜ισι το˜ισιν αὐτο˜ισιν ἐμβαίνουσιν, ἕτερα καὶ ἕτερα ὕδατα ἐπιρρε˜ι  \\%[0.5cm]
+  \latintext
+  \begin{em}
+    Ever-newer waters flow on those who step into the same rivers.  \\%[1cm]
+  \end{em}
+  Heraclitus \cite{Diels-Kranz}.%, Fragmente der Vorsokratiker, 22 B12
+\end{quote}
+
+%\end{quotation}
+
+\newpage
+
 \chapter*{Foreword}
 
-%Ποταμο˜ισι το˜ισιν αὐτο˜ισιν ἐμβαίνουσιν, ἕτερα καὶ ἕτερα ὕδατα ἐπιρρε˜ι
-%Aguas siempre nuevas fluyen sobre aquellos que entran en los mismos
-%r´ıos.
-%Her´aclito [2].
-
-%H A Diels. 
-%Die Fragmente der Vorsokratiker. 
-%Weidmann, Berlín, Alemania, 2 edition, 1903.
 
 Just a compilation of notes on different aspects of fluid
 dynamics I have collected over the years.
@@ -26,11 +37,12 @@ Universidad Polit\'ecnica de Madrid \\
 Madrid, Spain 2018
 
 
-
-
 \chapter{Introduction}
 
+Fluids, by definition, flow.
 
 
 \section{Notation}
 
+The main field is the velocity field, and the displacement is
+secundary.
